<resources>
    <string name="app_name">Account</string>
    <string name="name">Enter the name</string>
    <string name="amt">Enter the Amount</string>
    <string name="bal">Total Balance Amount</string>
    <string name="topay">Amount To Pay</string>
    <string name="paynow">Enter the Amount to pay</string>
    <string name="bt_add">Add</string>
    <string name="bt_list">Display</string>
    <string name="bt_view">view</string>
    <string name="bt_update">Update</string>
    <string name="emailid">skarthikeyan018@gmail.com</string>
    <string name="profile_name">Karthikeyan</string>
    <string name="view_single">Search by Name</string>
    <string name="view_full">Display</string>
    <string name="closeDrawer">Navigation View</string>
    <string name="openDrawer">Navigation View Closed</string>
    <string name="zero">0</string>
    <string name="name_delete">Enter the name to delete</string>
    <string name="but_del">Delete</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
