<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/dele_lay"
    tools:context="sk.com.account.Display">

    <TextView
        android:id="@+id/listdispla"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello_blank_fragment" />
    <android.support.design.widget.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <AutoCompleteTextView
        android:id="@+id/del_name"
        android:layout_width="250sp"
        android:layout_height="wrap_content"
            android:hint="@string/name_delete"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/but_del"/>


</LinearLayout>
