<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent">
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/view_layout">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">
        <TextView
            android:layout_width="@dimen/txt_width"
            android:layout_height="@dimen/txt_height"
            android:hint="@string/name"
            android:layout_gravity="center"
            android:gravity="center"/>
        <AutoCompleteTextView
            android:id="@+id/pay_name"
            android:layout_width="@dimen/txt_width"
            android:layout_height="@dimen/txt_height"
            android:singleLine="true"
            android:layout_gravity="center"
            android:inputType="text"
            android:imeOptions="actionNext">

        </AutoCompleteTextView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">
        <TextView
            android:layout_width="@dimen/txt_width"
            android:layout_height="@dimen/txt_height"
            android:hint="@string/bal"
            android:layout_gravity="center"
            android:gravity="center"/>
        <TextView
            android:id="@+id/pay_bal"
            android:layout_width="@dimen/txt_width"
            android:layout_height="@dimen/txt_height"
            android:hint="@string/zero"
            android:layout_gravity="center"
            android:gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">
        <TextView
            android:layout_width="@dimen/txt_width"
            android:layout_height="@dimen/txt_height"
            android:hint="@string/topay"
            android:layout_gravity="center"
            android:gravity="center"/>
        <TextView
            android:id="@+id/topay"
            android:layout_width="@dimen/txt_width"
            android:layout_height="@dimen/txt_height"
            android:hint="@string/zero"
            android:layout_gravity="center"
            android:gravity="center"/>
    </LinearLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center">
        <EditText
            android:id="@+id/amtpaynow"
            android:layout_width="250dp"
            android:layout_height="@dimen/txt_height"
            android:hint="@string/paynow"
            android:layout_gravity="center"
            android:inputType="number"
            android:imeOptions="actionDone"/>
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">
        <Button
            android:id="@+id/view_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bt_view"
            android:onClick="view" />
        <Button
            android:id="@+id/update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bt_update"
            android:onClick="update"
            android:layout_marginLeft="15dp"/>
    </LinearLayout>
    <!--Button
        android:id="@+id/display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="display"/>
    <TextView
        android:id="@+id/txt_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="sdfsfs"/-->

</LinearLayout>
</ScrollView>