<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/add_layout"
    tools:context="sk.com.account.MainActivity">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="200dp"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true">
        <TextView
            android:layout_width="@dimen/txt_width"
            android:layout_height="@dimen/txt_height"
            android:hint="@string/name"
            android:layout_gravity="center"
            android:gravity="center"/>
        <EditText
            android:id="@+id/name"
            android:layout_width="@dimen/txt_width"
            android:layout_height="@dimen/txt_height"
            android:singleLine="true"
            android:layout_gravity="center"
            android:inputType="text"
            android:imeOptions="actionNext"
            android:focusable="true"
            android:focusableInTouchMode="true">
        </EditText>

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">
        <TextView
            android:layout_width="@dimen/txt_width"
            android:layout_height="@dimen/txt_height"
            android:hint="@string/amt"
            android:layout_gravity="center"
            android:gravity="center"/>
        <EditText
            android:id="@+id/amt"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:inputType="number"
            android:imeOptions="actionNext"/>
    </LinearLayout>
    <!--LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">
        <TextView
            android:layout_width="@dimen/txt_width"
            android:layout_height="@dimen/txt_height"
            android:hint="@string/bal"
            android:layout_gravity="center"
            android:gravity="center"/>
        <TextView
            android:id="@+id/bal"
            android:layout_width="@dimen/txt_width"
            android:layout_height="@dimen/txt_height"
            android:hint="@string/bal"
            android:layout_gravity="center"
            android:gravity="center"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">
        <TextView
            android:layout_width="@dimen/txt_width"
            android:layout_height="@dimen/txt_height"
            android:hint="@string/topay"
            android:layout_gravity="center"
            android:gravity="center"/>
        <TextView
            android:id="@+id/topay"
            android:layout_width="@dimen/txt_width"
            android:layout_height="@dimen/txt_height"
            android:hint="@string/bal"
            android:layout_gravity="center"
            android:gravity="center"/>
    </LinearLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center">
    <EditText
        android:id="@+id/amtpaynow"
        android:layout_width="250dp"
        android:layout_height="@dimen/txt_height"
        android:hint="@string/paynow"
        android:layout_gravity="center"/>
    </android.support.design.widget.TextInputLayout>-->


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">
        <Button
            android:id="@+id/add_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bt_add"/>
        <Button
            android:id="@+id/view_bt_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bt_view"
            android:layout_marginLeft="15dp"/>
    </LinearLayout>


</LinearLayout>
</ScrollView>